crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_point_self_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0 @sticky.function
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (call_suffix
              (lambda_literal
                (statements
                  (guard_statement
                    ((simple_identifier) @fn_name @target
                      (#eq? @fn_name "self"))))))))))))
