crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_property_setter_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_property_setter
fixture: complex_scenarios.swift
strategy: Unified
range: "8"
node_type: computed_setter
query: "[query stored in separate _query.snap file]"
