crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_property_setter_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (property_declaration
      name: (pattern) @name0
      (#eq? @name0 "wrappedValue")
      (computed_property
        (computed_setter) @target))))
