crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_range_closure_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0 @sticky.function
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (_) @func
            (#eq? @func "queue.async")) @target)))))
