crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_side_effect_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0 @sticky.function
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (call_suffix
              (lambda_literal
                (statements
                  (if_statement
                    (statements
                      (call_expression
                        (_) @func
                        (#eq? @func "self.performSideEffect")) @target)))))))))))
