crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_typealias_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  name: (type_identifier) @name0 @sticky.class
  (#eq? @name0 "ComplexViewModel")
  (class_body
    (typealias_declaration
      name: (type_identifier) @fn_name
      (#eq? @fn_name "State")) @target))
